# evo_client_python

./: .coveragerc  .pre-commit-config.yaml  MIGRATION_GUIDE.md  README.md  combine_docs.py  combined_docs.md  pyproject.toml  pytest.ini  requirements.txt  setup.py  test-requirements.txt  update_tests.py
docs/: ActivitiesApi.md  AtividadeAgendaApiViewModel.md  AtividadeBasicoApiViewModel.md  AtividadeListApiViewModel.md  AtividadeLugarReservaApiViewModel.md  AtividadeLugarReservaViewModel.md  AtividadeSessaoParticipanteApiViewModel.md  BandeirasBasicoViewModel.md  BankAccountsApi.md  BankAccountsViewModel.md  BasicFreezeViewModel.md  BasicMemberMembershipApiViewModel.md  BonusSessionViewModel.md  BusinessHoursViewModel.md  CardDataViewModel.md  ClienteDetalhesBasicosApiViewModel.md  ClienteEnotasRetorno.md  ClienteTransferenciaViewModel.md  ClientesAtivosViewModel.md  ConfiguracaoApiViewModel.md  ConfigurationApi.md  ContratoEntradasApiViewModel.md  ContratoFiliaisResumoApiViewModel.md  ContratoNaoRenovadosViewModel.md  ContratosCanceladosParcelasApiViewModel.md  ContratosCanceladosResumoApiViewModel.md  ContratosResumoApiViewModel.md  ContratosResumoPaginaVendaViewModel.md  ConveniosApiViewModel.md  CostCenterApiViewModel.md  DadosContratoTrasnferenciaApiViewModel.md  DadosTrocaContratoApiViewModel.md  DiferenciaisApiViewModel.md  DifferentialsViewModel.md  EFormaContato.md  EFormaPagamentoTotem.md  EOrigemAgendamento.md  EStatusAtividade.md  EStatusAtividadeSessao.md  ETipoContrato.md  (+86 more)
examples/: async_demo.py  async_pagination_usage_example.py  chain_analytics_example.py  configuration_showcase.py  fetch_members_files.py  fetch_operating_data.py  fetch_with_auth.py  gym_api_example.py  multi_unit_example.py  pagination_usage_example.py  v2_import_showcase.py  webhook_management_example.py
swagger_client/: __init__.py  api_client.py  configuration.py  rest.py
test/: test_activities_api.py  test_atividade_agenda_api_view_model.py  test_atividade_basico_api_view_model.py  test_atividade_list_api_view_model.py  test_atividade_lugar_reserva_api_view_model.py  test_atividade_lugar_reserva_view_model.py  test_atividade_sessao_participante_api_view_model.py  test_bandeiras_basico_view_model.py  test_bank_accounts_api.py  test_bank_accounts_view_model.py  test_basic_freeze_view_model.py  test_basic_member_membership_api_view_model.py  test_bonus_session_view_model.py  test_business_hours_view_model.py  test_card_data_view_model.py  (+107 more)
(+587 files in other folders)
