[project]
name = "evo_client"
version = "1.0.4"
description = "ABC Evo SDK"
authors = [
    {email = "support@evo.com"}
]
keywords = ["Swagger", "EVO SDK"]
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Documentation = "https://evo-integracao.w12app.com.br/swagger/v1/swagger.json"

[build-system]
requires = ["setuptools>=21.0.0"]
build-backend = "setuptools.build_meta"
