[project]
name = "evo_client"
version = "1.0.5"
description = "ABC Evo SDK"
authors = [
    {email = "support@evo.com"}
]
keywords = ["Swagger", "EVO SDK"]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Documentation = "https://evo-integracao.w12app.com.br/swagger/v1/swagger.json"

[project.scripts]
gym = "evo_client.cli:gym_cli"

[build-system]
requires = ["setuptools>=21.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
